erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment
KarLaeda
	* Fixing bugs
	* Adding new NPC


== Changelog ==

Date		Added
======
10/24
	* Added official Gonryun Power Arena [KarLaeda]
	* Removed 2nd entrance warp to Novice Geffen Castle [Lupus]
	- minor fixes in Novice Exchanger
10/23
	* Fixed small typo in the Priest job quest [Playtester]
10/22
	* Small spawn updates for Gefenia and Einbech Dungeon [Playtester]
10/21
	* Further spawn updates for Yuno Field [Playtester]
	- Magma Dungeon
	- Amatsu Field
	- Amatsu Dungeon
	- Gonryun Field
	- Gonryun Dungeon
	- Umbala Field
	- Umbala Dungeon
	- Yggdrasil
	- Niflheim
	- Louyang Field
	- Louyang Dungeon
	- Ayothaya Field
	- Ayothaya Dungeon
10/20
	* Official kRO 10.1 spawns for Morroc Field [Playtester]
	- Prontera Field
	- Cities (reorganized citycleaners)
	* Added official Free Ticket for the Cart Service to the Novice Training Grounds [Lupus]
	- Fixed endless Novice Potion + Adv Suite exploit
	- Removed 2 oudated Novice Grounds scrips (they confused many people)
	* Official kRO 10.1 spawns for Mjolnir Field [Playtester]
	- Comodo Field
	- Geffen Field (+ 10.4 Orc Village change)
	- Payon Field
	* Added official Gonryun Broken Sword Quest [KarLaeda]
	* Fixed The Sign Exploits [Lupus]
	- Optimized Novice Exchanged (loot->Red Potions), moved the file to NPC\Merchants
	- Fixed The Sign bugs, thanks to Tantarian
		+ added get rid of sobbing pieces to let people reborn
		If u finished the Sign Quest and have some undeleted sobbing pieces, then visit this man
		mjo_dun02.gat 88,295 Flaming Spirit Man - he'll wipe them 8)
	- Fixed wrong label names in mjolnir_seal.txt, thanks to Tantarian
	- Added Feast Day Of Ramadan Idul Fitri Event (official idRO) by $ephiroth
10/19